--- a/style.css
+++ b/style.css
@@ -34,6 +34,14 @@ span {
  position: absolute;
 }
 
+.minorKeys {
+ top: 200px;
+}
+
+.sharpKeys {
+ top: 95px;
+}
+
 .whiteKeys{
  width: 80px;
  height: 250px;
